# multimodal-cascade-recsys

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  scale.yaml
docs/: 01-data.md  02-retrieval.md  03-ranking.md  04-rerank.md  05-serving.md  06-mlops.md  07-cascade-consistency.md  08-vlm-profiles.md  09-semantic-ids.md  10-scale.md  PITFALLS.md  RESULTS.md  WEEK1.md  WEEK10.md  WEEK2.md  WEEK3.md  WEEK4.md  WEEK5.md  WEEK6.md  WEEK7.md  WEEK8.md  WEEK9.md
src/vlmrec/: __init__.py  cli.py  config.py  eda.py  paths.py  utils.py
src/vlmrec/data/: __init__.py  build_interactions.py  download.py  download_images.py
src/vlmrec/eval/: __init__.py
src/vlmrec/features/: __init__.py  encode_image.py  encode_text.py
src/vlmrec/mlops/: __init__.py  log_runs.py
src/vlmrec/ranking/: __init__.py  data.py  eval.py  model.py  train.py
src/vlmrec/rerank/: __init__.py  candidates.py  cascade.py  postprocess.py  prerank.py
src/vlmrec/retrieval/: __init__.py  data.py  eval.py  i2i.py  index.py  model.py  train.py
src/vlmrec/serving/: __init__.py  app.py  catalog.py  demo_app.py  export_onnx.py  registry.py  service.py
src/vlmrec/sid/: __init__.py  eval.py  rqvae.py  tiger.py  train.py
src/vlmrec/vlm/: __init__.py  ablate.py  encode_profile.py  profile.py
tests/: test_data_logic.py  test_metrics.py  test_negatives.py  test_postprocess.py  test_rqvae_logic.py  test_serving_logic.py  test_vlm_logic.py
