[project]
name = "vlmrec"
version = "0.1.0"
description = "VLM-Rec: a multimodal multi-stage recommender on Amazon Reviews 2023"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ygbusc" }]

# Week-1 runtime deps only. Later weeks add extras (see [project.optional-dependencies]).
dependencies = [
    # data
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "pyarrow>=15",
    "polars>=1.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    # images
    "pillow>=10.0",
    "requests>=2.31",
    # multimodal embeddings (CUDA build pinned via [tool.uv] below to match the driver)
    "torch>=2.2",
    "torchvision>=0.17",
    "sentence-transformers>=3.0",
    "open_clip_torch>=2.24",
    # config
    "omegaconf>=2.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "onnxruntime>=1.17",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
retrieval = ["faiss-cpu>=1.8"]                                   # Week 2
serving = ["fastapi>=0.110", "uvicorn>=0.29", "onnxruntime>=1.17", "faiss-cpu>=1.8"]  # Week 5
mlops = ["mlflow>=2.12"]                                          # Week 6
# Week 8 — VLM item profiles (transformers backend). vLLM is deliberately NOT listed: its PyPI
# wheel links a newer libcudart than the 12.8 driver supports AND its torchaudio dep breaks
# transformers imports (see docs/PITFALLS.md). On a machine with a current driver, install vllm
# manually and set vlm.backend=vllm for ~3-6x throughput.
vlm = ["transformers>=4.49", "qwen-vl-utils>=0.0.8", "accelerate>=0.30"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
vlmrec = "vlmrec.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vlmrec"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Pin torch/torchvision to the CUDA 12.8 build (the system NVIDIA driver reports CUDA 12.8;
# the default PyPI cu130 wheel is too new and silently falls back to CPU). `explicit = true`
# means this index is used ONLY for the packages mapped to it in [tool.uv.sources].
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
